defconfig: Enable JUMP_LABEL
Description:

This option enables a transparent branch optimization that makes certain almost-always-true or almost-always-false branch conditions even cheaper to execute within the kernel.

Certain performance-sensitive kernel code, such as trace points, scheduler functionality, networking code and KVM have such branches and include support for this optimization technique.

If it is detected that the compiler has support for "asm goto", the kernel will compile such branches with just a nop instruction. When the condition flag is toggled to true, the nop will be converted to a jump instruction to execute the conditional block of instructions.

This technique lowers overhead and stress on the branch prediction of the processor and generally makes the kernel faster. The update of the condition is slower, but those are always very rare.

Signed-off-by: joshuous <joshuous@gmail.com>

--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -153,7 +153,6 @@ CONFIG_NAMESPACES=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
@@ -215,7 +214,8 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
-CONFIG_PROFILING=y
+CONFIG_PROFILING=
+CONFIG_JUMP_LABEL=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
