--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.153 Kernel Configuration
+# Linux/arm64 4.4.167 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -280,15 +280,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
-# CONFIG_MODULE_SIG=y
-# CONFIG_MODULE_SIG_FORCE=y
-# CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
+# CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
@@ -327,7 +319,7 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=m
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -704,7 +696,7 @@ CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1391,7 +1383,7 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SCSI_UFS_QCOM_ICE=y
-CONFIG_SCSI_UFS_TEST=m
+# CONFIG_SCSI_UFS_TEST is not set
 # CONFIG_SCSI_UFSHCD_CMD_LOGGING is not set
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_SNIC is not set
@@ -1774,7 +1766,7 @@ CONFIG_ATH_CARDS=y
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_WRITE_IOCTL=y
@@ -2063,7 +2055,7 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_MSM_SMD_PKT is not set
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+# CONFIG_MSM_RDBG is not set
 
 #
 # I2C support
@@ -2775,13 +2767,13 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 # CONFIG_MSM_AIS is not set
-CONFIG_DVB_MPQ=m
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ=y
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_TSPP1=y
 # CONFIG_DVB_MPQ_SW is not set
 # CONFIG_DVB_MPQ_MEDIA_BOX_DEMUX is not set
-CONFIG_TSPP=m
+CONFIG_TSPP=y
 
 #
 # Supported MMC/SDIO adapters
@@ -2985,7 +2977,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBU is not set
 CONFIG_IRIS2_IO=y
 CONFIG_BACKLIGHT_LP8557E01=y
 # CONFIG_IRIS2_FULL_SUPPORT is not set
@@ -3606,7 +3598,7 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=y
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_SIMULATE_MAX_SPEED is not set
 
 #
@@ -4007,7 +3999,7 @@ CONFIG_GPIO_USB_DETECT=y
 CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
 # CONFIG_MSM_MHI_DEBUG is not set
-CONFIG_MSM_11AD=m
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
@@ -5124,9 +5116,7 @@ CONFIG_PKCS7_MESSAGE_PARSER=y
 #
 # Certificates for signature checking
 #
-CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
-CONFIG_SYSTEM_TRUSTED_KEYRING=y
-CONFIG_SYSTEM_TRUSTED_KEYS="verity.x509.pem"
+# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -5204,40 +5194,3 @@ CONFIG_OID_REGISTRY=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
-
-#
-# Qualcomm Atheros CLD WLAN module
-#
-CONFIG_QCA_CLD_WLAN=m
-CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_WLAN_FEATURE_LPSS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_QCACLD_FEATURE_NAN=y
-CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
-# CONFIG_QCACLD_FEATURE_GREEN_AP is not set
-CONFIG_HELIUMPLUS=y
-CONFIG_64BIT_PADDR=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_LTE_COEX=y
-CONFIG_MPC_UT_FRAMEWORK=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_FEATURE_TSO=y
-CONFIG_FEATURE_TSO_DEBUG=y
-CONFIG_WLAN_FASTPATH=y
-CONFIG_WLAN_NAPI=y
-# CONFIG_WLAN_NAPI_DEBUG is not set
-CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
-CONFIG_WLAN_SYNC_TSF=y
-CONFIG_LFR_SUBNET_DETECTION=y
-CONFIG_MCC_TO_SCC_SWITCH=y
-CONFIG_QCACLD_WLAN_LFR2=y
-# CONFIG_WLAN_FEATURE_DISA is not set
-# CONFIG_WLAN_SPECTRAL_SCAN is not set
-# CONFIG_ICMP_DISABLE_PS is not set
-# CONFIG_CONFIG_BUILD_TIMESTAMP is not set
-CONFIG_WLAN_FEATURE_FILS=y
-# CONFIG_GOLDFISH is not set
-# CONFIG_CHROME_PLATFORMS is not set
