--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -2974,7 +2974,8 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-# CONFIG_FB_MSM_MDSS_XLOG_DEBU is not set
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_IRIS2_IO=y
 CONFIG_BACKLIGHT_LP8557E01=y
 # CONFIG_IRIS2_FULL_SUPPORT is not set
