defconfig: fix PROFILING missing value

--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -214,7 +214,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
-CONFIG_PROFILING=
+CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_KPROBES is not set
