defconfig: regen Enable SERIAL_MSM

--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -424,7 +424,6 @@ CONFIG_QCOM_TLB_EL2_HANDLER=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_HZ_500=y
-# CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=500
@@ -2012,6 +2011,8 @@ CONFIG_SERIAL_EARLYCON=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
+CONFIG_SERIAL_MSM=y
+CONFIG_SERIAL_MSM_CONSOLE=y
 CONFIG_SERIAL_MSM_HS=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
