--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -435,6 +435,7 @@ CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 CONFIG_ARCH_SELECT_MEMORY_MODEL=y
+CONFIG_ARCH_FLATMEM_ENABLE=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
