--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -1209,7 +1209,7 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 CONFIG_ZRAM_HIDE_LZO=y
 # CONFIG_ZRAM_WRITEBACK is not set
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
@@ -5076,9 +5076,9 @@ CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
-# CONFIG_CRYPTO_LZ4 is not set
+CONFIG_CRYPTO_LZ4=y
 # CONFIG_CRYPTO_LZ4HC is not set
-CONFIG_CRYPTO_ZSTD=y
+# CONFIG_CRYPTO_ZSTD is not set
 
 #
 # Random Number Generation
