--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -5202,7 +5202,7 @@ CONFIG_QMI_ENCDEC=y
 #
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
-# CONFIG_WLAN_FEATURE_FILS is not set
+CONFIG_WLAN_FEATURE_FILS=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
@@ -5211,7 +5211,7 @@ CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCACLD_FEATURE_NAN=y
 # CONFIG_WLAN_FEATURE_NAN_DATAPATH is not set
 CONFIG_QCACLD_FEATURE_GREEN_AP=y
-# CONFIG_QCACLD_FEATURE_METERING is not set
+CONFIG_QCACLD_FEATURE_METERING=y
 CONFIG_HELIUMPLUS=y
 # CONFIG_64BIT_PADDR is not set
 CONFIG_QCOM_TDLS=y
