Update defconfig Disable DLOAD_MODE_DEFAULT Enable RCU Boost Disable some more debug stuffs

--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -117,8 +117,9 @@ CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
-CONFIG_RCU_KTHREAD_PRIO=0
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_KTHREAD_PRIO=1
+CONFIG_RCU_BOOST_DELAY=500
 CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_NONE is not set
 # CONFIG_RCU_NOCB_CPU_ZERO is not set
@@ -2331,7 +2332,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
 # CONFIG_POWER_RESET_LTC2952 is not set
 CONFIG_POWER_RESET_QCOM=y
-CONFIG_DLOAD_MODE_DEFAULT=y
+# CONFIG_DLOAD_MODE_DEFAULT is not set
 CONFIG_QCOM_DLOAD_MODE=y
 # CONFIG_POWER_RESET_RESTART is not set
 CONFIG_POWER_RESET_XGENE=y
@@ -4483,7 +4484,7 @@ CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
-CONFIG_OEM_FORCE_DUMP=y
+# CONFIG_OEM_FORCE_DUMP is not set
 # CONFIG_PARAM_READ_WRITE is not set
 # CONFIG_OEM_DEBUG_SUPPORT is not set
 # CONFIG_OEM_TRACE_SUPPORT is not set
