--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -273,7 +273,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
@@ -5214,11 +5214,11 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCACLD_FEATURE_NAN=y
-# CONFIG_WLAN_FEATURE_NAN_DATAPATH is not set
+CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
 CONFIG_QCACLD_FEATURE_GREEN_AP=y
 CONFIG_QCACLD_FEATURE_METERING=y
 CONFIG_HELIUMPLUS=y
-# CONFIG_64BIT_PADDR is not set
+CONFIG_64BIT_PADDR=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 # CONFIG_MPC_UT_FRAMEWORK is not set
@@ -5232,7 +5232,7 @@ CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
 # CONFIG_LFR_SUBNET_DETECTION is not set
 CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
-CONFIG_WLAN_FEATURE_DISA=y
+# CONFIG_WLAN_FEATURE_DISA is not set
 # CONFIG_WLAN_SPECTRAL_SCAN is not set
 # CONFIG_ICMP_DISABLE_PS is not set
 # CONFIG_BUILD_TIMESTAMP is not set
