--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -1346,7 +1346,7 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SCH is not set
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -1769,7 +1769,7 @@ CONFIG_WLAN=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 # CONFIG_CNSS_CRYPTO is not set
 # CONFIG_CNSS_QCA6290 is not set
-CONFIG_ATH_CARDS=y
+# CONFIG_ATH_CARDS is not set
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
@@ -2999,10 +2999,7 @@ CONFIG_BACKLIGHT_LP8557E01=y
 # CONFIG_ADF is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEOMODE_HELPERS=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
-CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -4900,25 +4897,7 @@ CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
-# CONFIG_CORESIGHT_REMOTE_ETM is not set
-CONFIG_CORESIGHT_QCOM_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_CTI=y
-# CONFIG_CORESIGHT_CTI_SAVE_DISABLE is not set
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_QPDI=y
-CONFIG_CORESIGHT_SOURCE_DUMMY=y
+# CONFIG_CORESIGHT is not set
 
 #
 # Security options
@@ -5163,6 +5142,7 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
+CONFIG_XXHASH=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 CONFIG_AUDIT_COMPAT_GENERIC=y
