--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -3982,10 +3982,7 @@ CONFIG_ION_MSM=y
 # CONFIG_FSL_MC_BUS is not set
 # CONFIG_WILC1000_DRIVER is not set
 # CONFIG_MOST is not set
-# CONFIG_GOLDFISH is not set
-# CONFIG_CHROME_PLATFORMS is not set
 
-#
 # Qualcomm MSM specific device drivers
 #
 CONFIG_QPNP_REVID=y
@@ -5198,21 +5195,22 @@ CONFIG_WLAN_FEATURE_LPSS=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCACLD_FEATURE_NAN=y
 CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
-CONFIG_QCACLD_FEATURE_GREEN_AP=y
+# CONFIG_QCACLD_FEATURE_GREEN_AP is not set
 CONFIG_QCACLD_FEATURE_METERING=y
 CONFIG_HELIUMPLUS=y
 CONFIG_64BIT_PADDR=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
-# CONFIG_MPC_UT_FRAMEWORK is not set
+CONFIG_MPC_UT_FRAMEWORK=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
-# CONFIG_FEATURE_TSO is not set
+CONFIG_FEATURE_TSO=y
+CONFIG_FEATURE_TSO_DEBUG=y
 CONFIG_WLAN_FASTPATH=y
 CONFIG_WLAN_NAPI=y
 # CONFIG_WLAN_NAPI_DEBUG is not set
 CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
-# CONFIG_WLAN_SYNC_TSF is not set
-# CONFIG_LFR_SUBNET_DETECTION is not set
+CONFIG_WLAN_SYNC_TSF=y
+CONFIG_LFR_SUBNET_DETECTION=y
 CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 # CONFIG_WLAN_FEATURE_DISA is not set
@@ -5220,3 +5218,5 @@ CONFIG_QCACLD_WLAN_LFR2=y
 # CONFIG_ICMP_DISABLE_PS is not set
 # CONFIG_BUILD_TIMESTAMP is not set
 # CONFIG_WLAN_FEATURE_SARV1_TO_SARV2 is not set
+# CONFIG_GOLDFISH is not set
+# CONFIG_CHROME_PLATFORMS is not set
