--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -464,7 +464,7 @@ CONFIG_BOUNCE=y
 CONFIG_UKSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
