--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -1002,6 +1002,10 @@ CONFIG_NET_SCH_MULTIQ=y
 # CONFIG_NET_SCH_PIE is not set
 CONFIG_NET_SCH_INGRESS=y
 # CONFIG_NET_SCH_PLUG is not set
+CONFIG_NET_SCH_CAKE=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_CAKE=y
+CONFIG_DEFAULT_NET_SCH="cake"
 
 #
 # Classification
