--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -597,8 +597,25 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=128
+CONFIG_INPUT_BOOST_FREQ_LP=1094400
+CONFIG_INPUT_BOOST_FREQ_PERF=1056000
+CONFIG_INPUT_BOOST_STUNE_LEVEL=25
+CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=300000
+CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=300000
+CONFIG_AWAKE_REMOVE_INPUT_BOOST_FREQ_LP=518400
+CONFIG_AWAKE_REMOVE_INPUT_BOOST_FREQ_PERF=806400
+CONFIG_GENERAL_BOOST_FREQ_LP=748800
+CONFIG_GENERAL_BOOST_FREQ_PERF=806400
+CONFIG_GENERAL_BOOST_STUNE_LEVEL=8
+CONFIG_MAX_BOOST_STUNE_LEVEL=50
+CONFIG_DISPLAY_BOOST_STUNE_LEVEL=1
+CONFIG_BG_DISPLAY_BOOST_STUNE_LEVEL=-15
+CONFIG_SUSPEND_BOOST_STUNE_LEVEL=-35
+CONFIG_ROOT_SUSPEND_BOOST_STUNE_LEVEL=-15
 
 #
 # CPU frequency scaling drivers
