--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -319,6 +319,8 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
