--- a/arch/arm/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998.dtsi
@@ -853,6 +853,7 @@
 	};
 
 	devfreq_compute: qcom,devfreq-compute {
+		status = "disabled";
 		compatible = "qcom,arm-cpu-mon";
 		qcom,cpulist = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,target-dev = <&mincpubw>;
