defconfig: Enable USB Fast charge.
User request. OFF by default (via anykernel2).

Signed-off-by: idkwhoiam322 <snkm1999@gmail.com>

--- a/arch/arm64/configs/weebomni_defconfig
+++ b/arch/arm64/configs/weebomni_defconfig
@@ -3365,6 +3365,7 @@ CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB_CBAF is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # USB Host Controller Drivers
