--- a/arch/arm64/configs/weebcustom_defconfig
+++ b/arch/arm64/configs/weebcustom_defconfig
@@ -4891,7 +4891,7 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_MEMTEST is not set
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
-CONFIG_CC_WERROR=y
+# CONFIG_CC_WERROR is not set
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
